# game-store

./: README.md  db.sqlite3  docker-compose.yml  pyproject.toml
backend/: .dockerignore  .env  .env.dev  .gitignore  Dockerfile  README.md  pyproject.toml  pytest.ini
backend/gamestore/: settings.py  urls.py
backend/order/: factories.py  urls.py
backend/order/migrations/: 0001_initial.py  0003_rename_product_order_products.py  0004_remove_order_products_order_created_at_orderitem.py  0005_alter_order_user.py  0006_order_status.py
backend/order/models/: order.py  order_item.py
backend/order/serializers/: order_item_serializer.py  order_serializer.py
backend/order/views/: order_view.py  order_viewset.py
backend/order/viewsets/: order_viewset.py
backend/product/: admin.py  factories.py  urls.py
backend/product/migrations/: 0001_initial.py  0002_alter_product_id.py  0003_product_image.py  0004_remove_product_image_productimage.py
backend/product/models/: category.py  product.py  product_image.py
backend/product/serializers/: __init__.py  product_image_serializer.py  product_serializer.py
backend/product/views/: category_viewset.py  product_viewset.py
backend/shop_cart/: apps.py  urls.py
backend/shop_cart/migrations/: 0001_initial.py  0002_initial.py
backend/shop_cart/models/: __init__.py  cart_item.py  shop_cart.py
backend/tests/: test_views_library.py  test_views_order.py  test_views_product.py  test_views_shopcart.py  test_views_user.py  test_views_wallet.py
backend/user/: admin.py  urls.py
backend/wallet/: signals.py  urls.py  views.py
(+64 files in other folders)
